# kcwarden

./: .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-poetry-project/: action.yaml
.github/workflows/: checks.yaml  deploy-docs.yaml  lint.yaml  publish-container-image.yaml  publish.yaml  pytest-ci.yaml  test.yaml
Docker/: Dockerfile  dev.Dockerfile  release.Dockerfile
docs/: advanced_usage.md  development.md  index.md  installation.md  usage.md
docs/auditors/: clients.md  idp.md  index.md  realm.md  scope.md
docs/monitors/: client_monitor.md  group_monitor.md  index.md  protocol_mapper_monitor.md  role_monitor.md  service_account_monitor.md
kcwarden/: cli.py
kcwarden/api/: __init__.py  auditor.py  monitor.py
kcwarden/auditors/: client_auditor.py  idp_auditor.py  realm_auditor.py  scope_auditor.py
kcwarden/auditors/client/: __init__.py  client_access_token_lifespan_too_long.py  client_authentication_via_mtls_or_jwt_recommended.py  client_has_erroneously_configured_wildcard_uri.py  client_has_no_redirect_uris.py  client_has_undefined_base_domain_and_schema.py  client_has_undefined_base_domain_and_schema_in_post_logout_redirect_uri.py  client_must_not_use_global_wildcard_uri.py  client_must_not_use_unencrypted_nonlocal_redirect_uri.py  client_session_idle_timeout_not_set_while_sso_session_idle_timeout_too_long.py  client_should_disable_implicit_grant_flow.py  client_should_not_use_wildcard_redirect_uri.py  client_uses_custom_redirect_uri_scheme.py  client_web_origins_must_be_valid.py  client_web_origins_must_not_use_wildcard.py  client_with_default_offline_access_scope.py  client_with_full_scope_allowed.py  client_with_optional_offline_access_scope.py  client_with_service_account_and_other_flow_enabled.py  confidential_client_should_disable_direct_access_grants.py  confidential_client_should_enforce_pkce.py  public_client_should_disable_direct_access_grants.py  public_clients_must_enforce_pkce.py  saml_client_assertion_signature.py  saml_client_encrypt_check.py  saml_client_erroneously_configured_wildcard_uri.py  saml_client_onetimeuse_check.py  saml_client_should_not_use_wildcard_redirect_uri.py  saml_client_signature.py  saml_client_weak_algorithm.py  saml_client_wildcard_redirect_uris.py  saml_client_with_assertion_signature_disabled.py  saml_client_with_client_signature_disabled.py  saml_client_with_encryption_disabled.py  saml_client_with_weak_signature_algorithm.py  saml_client_without_onetimeuse_condition.py  using_nondefault_user_attributes_in_clients_without_user_profiles_feature_is_dangerous.py
kcwarden/auditors/idp/: identity_provider_with_mappers_without_force_sync_mode.py  identity_provider_with_one_time_sync.py  identity_provider_with_signature_verification_disabled.py  oidc_identity_provider_with_signature_verification_disabled.py  oidc_identity_provider_without_pkce.py  saml_identity_provider_with_signature_verification_disabled.py  saml_identity_provider_without_encrypted_assertions.py  saml_identity_provider_without_post_binding_response.py  saml_identity_provider_without_signed_assertions.py  saml_identity_provider_without_signed_authn_requests.py  saml_idp_post_binding_response.py  saml_idp_validate_signature.py  saml_idp_want_assertions_encrypted.py  saml_idp_want_assertions_signed.py  saml_idp_want_authn_requests_signed.py
kcwarden/auditors/realm/: abstract_realm_auditor.py  access_token_lifespan_too_long.py  keycloak_version_should_be_up_to_date.py  offline_session_max_lifespan_disabled.py  password_hashing_iterations_too_low.py  password_policy_missing.py  realm_brute_force_protection_disabled.py  realm_email_verification_disabled.py  realm_self_registration_enabled.py  refresh_token_reuse_count_should_be_zero.py  refresh_tokens_should_be_revoked_after_use.py  sso_session_idle_timeout_exceeds_client_session_idle_timeout.py
kcwarden/auditors/saml/: idp_post_binding_response.py  idp_validate_signature.py  idp_want_assertions_encrypted.py  idp_want_assertions_signed.py  idp_want_authn_requests_signed.py  saml_assertion_signature.py  saml_client_signature.py  saml_encrypt_check.py  saml_onetimeuse_check.py  saml_weak_algorithm.py  wildcard_redirect_uris.py
kcwarden/auditors/scope/: using_nondefault_user_attributes_in_scopes_without_user_profiles_feature_is_dangerous.py
kcwarden/auditors/subchecks/: access_tokens.py  realm.py
kcwarden/configuration/: auditors.py  template.py
kcwarden/custom_types/: config_keys.py  database.py  keycloak_object.py  result.py  result_headers.py
kcwarden/database/: helper.py  importer.py  in_memory_db.py
kcwarden/monitors/: client_monitor.py  group_monitor.py  protocol_mapper_monitor.py  service_account_monitor.py
kcwarden/monitors/client/: client_with_sensitive_role.py  client_with_sensitive_scope.py
kcwarden/monitors/group/: group_with_sensitive_role.py
kcwarden/monitors/protocol_mapper/: protocol_mapper_with_config.py  protocol_mapper_with_config_on_client_scope.py
kcwarden/monitors/role/: role_with_sensitive_associated_role.py
kcwarden/subcommands/: audit.py  configuration.py  download.py  review.py
kcwarden/utils/: arguments.py  auditor_importing.py  github.py  plugins.py
tests/: conftest.py
tests/api/: test_client_auditor_should_consider_client.py
tests/custom_types/: test_keycloak_object.py
tests/database/: test_helper.py
tests/fixtures/: default-realm.json  test-realm-with-client.json
tests/integration/: conftest.py
tests/monitors/: test_monitor.py
tests/utils/: test_auditor_importing.py  test_plugins.py
(+80 files in other folders)
