[tool.poetry]
name = "kcwarden"
version = "0.0.0"
description = "Keycloak auditor"
authors = ["Max Maass <max.maass@iteratec.com>", "Tim Walter <tim.walter@iteratec.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://iteratec.github.io/kcwarden/"
repository = "https://github.com/iteratec/kcwarden"
documentation = "https://iteratec.github.io/kcwarden/"
keywords = ["keycloak", "security-scanner", "oauth2", "oidc"]
classifiers = ["License :: OSI Approved :: Apache Software License", "Topic :: Security", "Topic :: Software Development :: Testing", "Operating System :: OS Independent"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/iteratec/kcwarden/issues"
"Sponsor" = "https://www.iteratec.com/"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pyyaml = "^6.0.2"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.2,<10.0.0"
testcontainers = { extras = ["keycloak"], version = "^4.9.2" }
python-keycloak = ">=5.5,<6.0"
ruff = ">=0.11.10,<0.15.0"
pre-commit = "^4.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
kcwarden = "kcwarden.cli:main"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-ra -q"

[tool.ruff]
src = ["kcwarden", "tests"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "C90", "N", "RUF", "PL"]
ignore = [
    "E501", # line length
    "PLR2004", # Magic value used in comparison
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "PLR0913", # Too many arguments in function definition
    "PLR0912", #  Too many branches
    "C901", # Too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
