[project]
name = "kcwarden"
dynamic = ["version"]
description = "Keycloak auditor"
authors = [
    { name = "Max Maass", email = "max.maass@iteratec.com" },
    { name = "Tim Walter", email = "tim.walter@iteratec.com" },
]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "keycloak",
    "security-scanner",
    "oauth2",
    "oidc",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.3,<3",
    "pyyaml>=6.0.2,<7",
    "rich>=14,<16",
]

[project.urls]
Homepage = "https://iteratec.github.io/kcwarden/"
Repository = "https://github.com/iteratec/kcwarden"
Documentation = "https://iteratec.github.io/kcwarden/"
"Bug Tracker" = "https://github.com/iteratec/kcwarden/issues"
Sponsor = "https://www.iteratec.com/"

[project.scripts]
kcwarden = "kcwarden.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "testcontainers[keycloak]>=4.9.2",
    "python-keycloak>=5.5",
    "ruff>=0.15.0",
    "pre-commit>=4.2.0",
]
docs = ["mkdocs>=1.6.1,<2"]

[tool.uv]
exclude-newer = "3 days"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.1"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = [
    "tests"
]
addopts = [
    "-ra",
    "-q"
]
filterwarnings = [
    'ignore:The @wait_container_is_ready:DeprecationWarning',
    'ignore:The wait_for_logs:DeprecationWarning',
]

[tool.ruff]
src = ["kcwarden", "tests"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "C90", "N", "RUF", "PL"]
ignore = [
    "E501", # line length
    "PLR2004", # Magic value used in comparison
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "PLR0913", # Too many arguments in function definition
    "PLR0912", #  Too many branches
    "C901", # Too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
